--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
   "author": "SAM CLI",
   "license": "MIT",
-  "dependencies": {},
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
@@ -16,10 +15,10 @@
     "@types/aws-lambda": "^8.10.95",
     "@types/node": "^17.0.31",
     "aws-sdk": "^2.1129.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4",
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
-    "mochawesome": "^7.1.3"
+    "mochawesome": "^7.1.3",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
