--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "preserveConstEnums": true,
       "sourceMap": false,
       "module":"CommonJS",
-      "moduleResolution":"node",
+      "moduleResolution":"nodenext",
       "esModuleInterop": true, 
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,  
