Fix all unit tests.

--- a/cloudprojectmarker/tsconfig.json
+++ b/cloudprojectmarker/tsconfig.json
@@ -15,9 +15,7 @@
     "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": false,
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "experimentalDecorators": true,
+    "inlineSourceMap": false,   
     "strictPropertyInitialization": false,
     "esModuleInterop": true,
     "moduleResolution": "nodenext",
