--- a/cloudprojectmarker/tsconfig.json
+++ b/cloudprojectmarker/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2022",
-    "module": "commonjs",
+    "module": "NodeNext",
     "lib": [
       "es2022"
     ],
