Replace with new SAM project in .net.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,7 @@
       // Add the IDs of extensions you want installed when the container is created.
       "extensions": [
         "ms-dotnettools.csharp",
+        "ms-dotnettools.csdevkit",
         "editorconfig.editorconfig",
         "github.copilot"
       ]
