Add Cloud Test project

--- a/CloudProjectMarker/src/ServerlessAPI/ServerlessAPI.csproj
+++ b/CloudProjectMarker/src/ServerlessAPI/ServerlessAPI.csproj
@@ -21,4 +21,8 @@
     <InternalsVisibleTo Include="ServerlessAPI.Tests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectTestLib\ProjectTestLib.csproj" />
+  </ItemGroup>
+
 </Project>
