--- a/CloudProjectMarker/src/ProjectTestLib/ProjectTestLib.csproj
+++ b/CloudProjectMarker/src/ProjectTestLib/ProjectTestLib.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.Core" Version="3.7.302.15" />
+    <PackageReference Include="NUnit" Version="4.1.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="NUnitLite" Version="4.1.0" />
+  </ItemGroup>
+
 </Project>
