--- a/CloudProjectMarker/src/ServerlessAPI/ServerlessAPI.csproj
+++ b/CloudProjectMarker/src/ServerlessAPI/ServerlessAPI.csproj
@@ -15,6 +15,9 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.0.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.3.7" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NUnit" Version="4.1.0" />
+    <PackageReference Include="NUnitLite" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
