--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ events/event.json
 output.json
 testResult.json
 env.json
+CloudProjectMarker/events/credentials.env
+CloudProjectMarker/events/event.json
