--- a/CloudProjectMarker/src/ProjectTestLib/ProjectTestLib.csproj
+++ b/CloudProjectMarker/src/ProjectTestLib/ProjectTestLib.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.Core" Version="3.7.302.15" />
     <PackageReference Include="AWSSDK.EC2" Version="3.7.316" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.55" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
