--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "typescript.tsdk": "node_modules/typescript/lib",
-    "dotnet-test-explorer.testProjectPath": "**/*Tests*.csproj",
-    "dotnet-test-explorer.autoWatch": true
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
