Add dotnet-test-explorer. Finish VPC Test.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "typescript.tsdk": "node_modules/typescript/lib"
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "dotnet-test-explorer.testProjectPath": "CloudProjectMarker/src/ProjectTestsLib",
 }
