--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
         "ms-dotnettools.csharp",
         "ms-dotnettools.csdevkit",
         "editorconfig.editorconfig",
-        "github.copilot"
+        "github.copilot",
+        "formulahendry.dotnet-test-explorer"
       ]
     }
   }
