--- a/CloudProjectMarker/.gitignore
+++ b/CloudProjectMarker/.gitignore
@@ -403,3 +403,8 @@ __pycache__/
 
 
 # End of https://www.gitignore.io/api/macos,linux,windows,sublimetext,dotsettings,visualstudio,visualstudiocode
+
+.aws-sam/
+events/credentials.env
+events/event.json
+events/awsTestConfig.json
