--- a/.gitignore
+++ b/.gitignore
@@ -404,7 +404,7 @@ __pycache__/
 
 # End of https://www.gitignore.io/api/macos,linux,windows,sublimetext,dotsettings,visualstudio,visualstudiocode
 
-.aws-sam/
+.aws-sam/*
 events/credentials.env
 events/event.json
 events/awsTestConfig.json
