--- a/src/ProjectTestsLib/ProjectTestsLib.csproj
+++ b/src/ProjectTestsLib/ProjectTestsLib.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Core" Version="3.7.302.15" />
-    <PackageReference Include="AWSSDK.EC2" Version="3.7.316" />
-    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.55" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.302.16" />
+    <PackageReference Include="AWSSDK.EC2" Version="3.7.316.1" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.56" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.301.3" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.300.55" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NUnit" Version="4.1.0" />
