--- a/src/ProjectTestsLib/ProjectTestsLib.csproj
+++ b/src/ProjectTestsLib/ProjectTestsLib.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.Core" Version="3.7.302.16" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.19" />
     <PackageReference Include="AWSSDK.EC2" Version="3.7.316.1" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.302.30" />
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.56" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.301.3" />
     <PackageReference Include="AWSSDK.SQS" Version="3.7.300.55" />
