--- a/src/ProjectTestsLib/ProjectTestsLib.csproj
+++ b/src/ProjectTestsLib/ProjectTestsLib.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="AWSSDK.Core" Version="3.7.302.16" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.19" />
     <PackageReference Include="AWSSDK.EC2" Version="3.7.316.1" />
+    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.300.55" />
+    <PackageReference Include="AWSSDK.Lambda" Version="3.7.304.4" />
     <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.302.30" />
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.56" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.301.3" />
