--- a/src/ProjectTestsLib/ProjectTestsLib.csproj
+++ b/src/ProjectTestsLib/ProjectTestsLib.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.302.7" />
+    <PackageReference Include="AWSSDK.CloudWatchLogs" Version="3.7.304.9" />
     <PackageReference Include="AWSSDK.Core" Version="3.7.302.16" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.19" />
     <PackageReference Include="AWSSDK.EC2" Version="3.7.316.1" />
