--- a/src/ProjectTestsLib/ProjectTestsLib.csproj
+++ b/src/ProjectTestsLib/ProjectTestsLib.csproj
@@ -7,17 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.302.7" />
-    <PackageReference Include="AWSSDK.CloudWatchLogs" Version="3.7.304.9" />
-    <PackageReference Include="AWSSDK.Core" Version="3.7.302.16" />
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.19" />
-    <PackageReference Include="AWSSDK.EC2" Version="3.7.316.1" />
-    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.300.55" />
-    <PackageReference Include="AWSSDK.Lambda" Version="3.7.304.4" />
-    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.302.30" />
-    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.56" />
-    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.301.3" />
-    <PackageReference Include="AWSSDK.SQS" Version="3.7.300.55" />
+    <PackageReference Include="AWSSDK.AutoScaling" Version="3.7.302.15" />
+    <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.302.8" />
+    <PackageReference Include="AWSSDK.CloudWatchLogs" Version="3.7.304.10" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.302.17" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.20" />
+    <PackageReference Include="AWSSDK.EC2" Version="3.7.316.3" />
+    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.300.56" />
+    <PackageReference Include="AWSSDK.Lambda" Version="3.7.304.5" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.302.31" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.57" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.301.4" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.300.56" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NUnit" Version="4.1.0" />
