--- a/src/ProjectTestsLib/ProjectTestsLib.csproj
+++ b/src/ProjectTestsLib/ProjectTestsLib.csproj
@@ -7,22 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.AutoScaling" Version="3.7.302.15" />
-    <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.302.8" />
-    <PackageReference Include="AWSSDK.CloudWatchLogs" Version="3.7.304.10" />
-    <PackageReference Include="AWSSDK.Core" Version="3.7.302.17" />
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.20" />
-    <PackageReference Include="AWSSDK.EC2" Version="3.7.316.3" />
-    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.300.56" />
-    <PackageReference Include="AWSSDK.Lambda" Version="3.7.304.5" />
-    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.302.31" />
-    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.57" />
-    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.301.4" />
-    <PackageReference Include="AWSSDK.SQS" Version="3.7.300.56" />
+    <PackageReference Include="AWSSDK.AutoScaling" Version="3.7.302.18" />
+    <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.302.11" />
+    <PackageReference Include="AWSSDK.CloudWatchLogs" Version="3.7.304.13" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.302.20" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.23" />
+    <PackageReference Include="AWSSDK.EC2" Version="3.7.317.1" />
+    <PackageReference Include="AWSSDK.ElasticLoadBalancingV2" Version="3.7.302.15" />
+    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.300.59" />
+    <PackageReference Include="AWSSDK.Lambda" Version="3.7.304.8" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.302.34" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.60" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.301.7" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.300.59" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NUnit" Version="4.1.0" />
-    <PackageReference Include="NUnit.Analyzers" Version="4.0.1">
+    <PackageReference Include="NUnit.Analyzers" Version="4.1.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
